# totalopenstation

./: .gitignore  .hgignore  .travis.yml  AUTHORS  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  LEGGIMI.txt  MANIFEST.in  README.rst  README.txt  TODO  __init__.py  _config.yml  archive.html  doc_requirements.txt  dxfexporter.py  index.html  interactive.py  pyproject.toml  setup.py  test_leica.py  test_leica2.py  test_zeiss.py  tkops.py  tops_ParseAndExport_interface.py  tops_ParserExport.py  tops_graphs.py  tops_interface.py  tops_paramset.py  tops_serial_IO.py  total.py  totalopenstation-cli-connector.py  totalopenstation-cli-parser.py  totalopenstation-gui  totalopenstation-gui.py  totalopenstation-gui.spec  totalopenstation-gui2.py  tox.ini
.github/: FUNDING.yml
.tx/: config
_drafts/: 2019-11-25-totalopenstation-0-5.md
_layouts/: default.html  post.html
_posts/: 2014-03-08-sdr33-format.md  2014-07-16-leica-tc307.md  2014-08-19-leica-tc407-osx.md  2014-12-15-total-open-station-mac-osx.md  2015-05-02-v031-bugfix-release.md  2015-07-23-v032-bugfix-release.md  2015-09-24-v033-bugfix-release.md  2016-01-07-pyserial-30.md  2016-06-22-portable-tops-beta.md  2017-01-03-totalopenstation-specialised-format-converter-sphinx-gpsbabel-pandoc.md  2019-08-22-totalopenstation-0-4.md  2019-08-22_totalopenstation-0-4.md  2019-11-25-totalopenstation-0-5.md  2020-04-13-new-home-totalopenstation-project.md  2025-04-27-two-new-releases-v06-v07.md
css/: main.css
data/: template.xml  totalopenstation.desktop
docs/: Makefile  conf.py  contents.rst  contents.txt  contributing.rst  contributing.txt  data.rst  faq.txt  formats.rst  formats.txt  getting_sample_data.rst  global.rst  glossary.rst  glossary.txt  index.rst  index.txt  installing.rst  installing.txt  library.txt  make.bat  models.rst  models.txt  release.rst  release.txt  requirements.txt  roadmap.txt  running.rst  running.txt  users.txt  (+2 more)
(+203 files in other folders)
